# custom-colormaps

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  readme.doctree
.doctrees/_apidoc/: custom_colormaps.doctree  custom_colormaps.main.doctree  custom_colormaps.return_colormap.doctree
.github/workflows/: pypi.yml  test.yml
_apidoc/: custom_colormaps.html  custom_colormaps.main.html  custom_colormaps.return_colormap.html
_modules/: index.html
_modules/custom_colormaps/: main.html  return_colormap.html
_sources/: index.rst.txt  readme.rst.txt
_sources/_apidoc/: custom_colormaps.main.rst.txt  custom_colormaps.return_colormap.rst.txt  custom_colormaps.rst.txt
colordata/: cmapdata.toml
custom_colormaps/: __init__.py  main.py  return_colormap.py
custom_colormaps/colordata/: cmapdata.toml
docs/: conf.py
scripts/: docs
tests/: test_metadata.py
