[tool.poetry]
name = "custom-colormaps"
version = "0.3.4"
description = "custom colormaps "
authors = ["Rin Yamada <yamada@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/a-lab-nagoya/custom-colormaps"
documentation = "https://a-lab-nagoya.github.io/custom-colormaps/"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.5"
matplotlib = "^3.3.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^20.8b"
flake8 = "^3.8"
ipython = "^7.16"
ipykernel = "^5.3"
pydata-sphinx-theme = "^0.4"
pytest = "^6.0"
sphinx = "^3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
